deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-status
  labels:
    app: nginx-status
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-status
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: nginx-status
    spec:
      containers:
        - name: nginx-status
          image: hasangural/nginx-status:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 3
